--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,6 @@ env:
     - PANDAS=
     - NPROC=2
     - TEST_ARGS=--no-pep8
-    - NOSE_ARGS="-j $NPROC"
     - PYTEST_ARGS="-ra --maxfail=1 --timeout=300 --durations=25 --cov-report= --cov=lib -n $NPROC"
     - PYTHON_ARGS=
     - DELETE_FONT_CACHE=
@@ -57,7 +56,7 @@ matrix:
     - python: 3.4
       env: PYTHON_ARGS=-OO
     - python: 3.5
-      env: PANDAS=pandas NOSE_ARGS=--with-coverage DELETE_FONT_CACHE=1
+      env: PANDAS=pandas DELETE_FONT_CACHE=1
     - python: 3.5
       env: BUILD_DOCS=true
     - python: 3.5
@@ -69,7 +68,7 @@ matrix:
     - os: osx
       osx_image: xcode7.3
       language: generic  # https://github.com/travis-ci/travis-ci/issues/2312
-      env: MOCK=mock NOSE_ARGS=
+      env: MOCK=mock
       cache:
         # As for now travis caches only "$HOME/.cache/pip"
         # https://docs.travis-ci.com/user/caching/#pip-cache
@@ -116,9 +115,6 @@ install:
     pip install $PRE python-dateutil $NUMPY pyparsing!=2.1.6 $PANDAS pep8 cycler coveralls coverage $MOCK
     pip install $PRE -r doc-requirements.txt
 
-    # Install nose from a build which has partial
-    # support for python36 and suport for coverage output suppressing
-    pip install git+https://github.com/jenshnielsen/nose.git@matplotlibnose
     # pytest-cov>=2.3.1 due to https://github.com/pytest-dev/pytest-cov/issues/124
     pip install $PRE pytest 'pytest-cov>=2.3.1' pytest-timeout pytest-xdist pytest-faulthandler
 
@@ -155,20 +151,20 @@ script:
         rm -rf ~/.cache/matplotlib
       fi
       export MPL_REPO_DIR=$PWD  # needed for pep8-conformance test of the examples
+      # Workaround for pytest-xdist flaky colletion order
+      # https://github.com/pytest-dev/pytest/issues/920
+      # https://github.com/pytest-dev/pytest/issues/1075
+      export PYTHONHASHSEED=$(shuf -i 1-4294967295 -n 1)
+      echo PYTHONHASHSEED=$PYTHONHASHSEED
+
       if [[ $USE_PYTEST == false ]]; then
-        echo The following args are passed to nose $NOSE_ARGS
+        echo The following args are passed to pytest $PYTEST_ARGS
         if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-          python tests.py $NOSE_ARGS $TEST_ARGS
+          python tests.py $PYTEST_ARGS $TEST_ARGS
         else
-          gdb -return-child-result -batch -ex r -ex bt --args python $PYTHON_ARGS tests.py $NOSE_ARGS $TEST_ARGS
+          gdb -return-child-result -batch -ex r -ex bt --args python $PYTHON_ARGS tests.py $PYTEST_ARGS $TEST_ARGS
         fi
       else
-        # Workaround for pytest-xdist flaky colletion order
-        # https://github.com/pytest-dev/pytest/issues/920
-        # https://github.com/pytest-dev/pytest/issues/1075
-        export PYTHONHASHSEED=$(shuf -i 1-4294967295 -n 1)
-        echo PYTHONHASHSEED=$PYTHONHASHSEED
-
         echo The following args are passed to pytest $PYTEST_ARGS
         py.test $PYTEST_ARGS $TEST_ARGS
       fi
@@ -225,7 +221,7 @@ after_success:
     else
       echo "Will only deploy docs build from matplotlib master branch"
     fi
-    if [[ $NOSE_ARGS =~ "--with-coverage" || $USE_PYTEST == true ]]; then
+    if [[ $USE_PYTEST == true ]]; then
       coveralls
       bash <(curl -s https://codecov.io/bash)
     fi
